Added components for sidebar and infoBoxes.

--- a/bs-config.json
+++ b/bs-config.json
@@ -3,7 +3,8 @@
         "baseDir": "./demo",
         "routes": {
             "/node_modules": "node_modules",
-            "/dist": "dist"
+            "/dist": "dist",
+            "/demo": "demo"
         }
     }
 }
