--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "angular-lte",
+  "name": "@odense/angular-lte",
   "version": "0.2.0",
   "description": "AngularJS bindings for the admin-lte bootstrap theme.",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
-    "start": "lite-server"
+    "start": "lite-server",
+    "prepublishOnly": "gulp"
   },
   "keywords": [
     "angularjs",
     "admin-lte",
     "bootstrap"
   ],
+  "publishConfig": {
+    "registry": "https://nexus.odknet.dk/repository/npm-hosted/"
+  },
   "author": "Gert Peter Brigsted <manisto@manisto.dk>",
   "license": "ISC",
   "dependencies": {
